feat: swagger List
